fix: avoid deprecated methods