@@ -120,7 +120,7 @@ public abstract class Controller {
                 Object bean = applicationContext.getBean(this.handlerClass);
                 this.handler = (AbstractHandler) bean;
             } catch (NoSuchBeanDefinitionException nsbde) {
-                this.handler = (AbstractHandler) this.handlerClass.newInstance();
+                this.handler = (AbstractHandler) this.handlerClass.getDeclaredConstructor().newInstance();
             }
 
             String validatorClassName = "biblivre." + module + ".Validator";
@@ -134,7 +134,7 @@ public abstract class Controller {
 
                 validator = (AbstractValidator) bean;
             } catch (NoSuchBeanDefinitionException nsbde) {
-                validator = (AbstractValidator) validatorClass.newInstance();
+                validator = (AbstractValidator) validatorClass.getDeclaredConstructor().newInstance();
             }
 
             String validationMethodName = "validate_" + action;
